welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020: error: ambiguous reference to overloaded definition,
both method max1020 in class max1020 of type (a: Int, b: Int)Int
and  method max1020 in class max1020 of type (a: Int, b: Int)Int
match argument types (Int,Int) and expected result type Any
   t.setResult( max1020( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int]) )
                ^max1020:22: error: method max1020 is defined twice
  conflicting symbols both originated in file 'plm.runtime58.max1020'
def max1020(a:Int, b:Int):Int =  {
    ^